# ChangeLog for net-libs/libtorrent
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.56 2006/05/19 16:50:53 flameeyes Exp $

  19 May 2006; Diego Pettenò <flameeyes@gentoo.org> +Manifest.asc:
  Force manifest sign.

*libtorrent-0.9.2 (19 May 2006)

  19 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.9.2.ebuild:
  Version bump.

*libtorrent-0.9.1 (05 May 2006)

  05 May 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.9.1.ebuild:
  Version bump.

*libtorrent-0.9.0-r1 (23 Apr 2006)

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  +files/libtorrent-0.9.0-crash.patch, +libtorrent-0.9.0-r1.ebuild:
  Add patch from upstream for avoiding random crashes, thanks to Josu López
  Fernández for reporting in bug #131007.

  23 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  libtorrent-0.9.0.ebuild:
  Add ~x86-fbsd keyword.

  20 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  -libtorrent-0.7.6.ebuild, -libtorrent-0.8.4.ebuild,
  -libtorrent-0.8.5.ebuild:
  Drop old versions.

*libtorrent-0.9.0 (06 Apr 2006)

  06 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.9.0.ebuild:
  Version bump.

  17 Feb 2006; Joseph Jezak <josejx@gentoo.org> libtorrent-0.8.3.ebuild:
  Marked ppc stable for bug #121600.

  16 Feb 2006; Luis Medinas <metalgod@gentoo.org> libtorrent-0.8.3.ebuild:
  Stable on amd64. See bug #121600.

*libtorrent-0.8.5 (16 Feb 2006)

  16 Feb 2006; Diego Pettenò <flameeyes@gentoo.org>
  +libtorrent-0.8.5.ebuild:
  New upstream version.

  15 Feb 2006; Markus Rothe <corsair@gentoo.org> libtorrent-0.8.3.ebuild:
  Stable on ppc64; bug #121600

  09 Feb 2006; Joshua Jackson <tsunam@gentoo.org> libtorrent-0.8.3.ebuild:
  Stable on x86; bug #121600

  04 Feb 2006; Diego Pettenò <flameeyes@gentoo.org>
  libtorrent-0.8.3.ebuild, libtorrent-0.8.4.ebuild:
  Add missing elibtoolize call.

  04 Feb 2006; Diego Pettenò <flameeyes@gentoo.org>