@@ -1,39 +1,44 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-AUX libtorrent-0.9.0-crash.patch 1299 RMD160 6be63e5b60f167bca2836bbdc83a67da31570eaa SHA1 fde8bef1df468d9b6a960dee4b30eec3849aa73d SHA256 92bf38450bed6f96b65d7f657d3ebb7e4edf775ccfa7ca6798769f450619628c size 1299
+AUX libtorrent-0.9.0-crash.patch 1299 RMD160 6be63e5b60f167bca2836bbdc83a67da31570eaa SHA1 fde8bef1df468d9b6a960dee4b30eec3849aa73d SHA256 92bf38450bed6f96b65d7f657d3ebb7e4edf775ccfa7ca6798769f450619628c
 MD5 4ae083d6c45890313c896d5caf069121 files/libtorrent-0.9.0-crash.patch 1299
 RMD160 6be63e5b60f167bca2836bbdc83a67da31570eaa files/libtorrent-0.9.0-crash.patch 1299
 SHA256 92bf38450bed6f96b65d7f657d3ebb7e4edf775ccfa7ca6798769f450619628c files/libtorrent-0.9.0-crash.patch 1299
-DIST libtorrent-0.8.3.tar.gz 445167 size 445167
-DIST libtorrent-0.9.0.tar.gz 461999 RMD160 3ad37136459bd965d73003bc7f1aa35c30c3d11e SHA256 2181e7550f3837735252c51db005101eabceab6a247d1cd13f451511f4d18ef7 size 461999
-DIST libtorrent-0.9.1.tar.gz 462098 RMD160 20a17dcf76290ef32505672d4c85ab1fb027db22 SHA256 98a634d361922a7f41b7bd18f21c3c98749908046117b11ca43d414cbcd62e05 size 462098
-DIST libtorrent-0.9.2.tar.gz 463648 RMD160 2e084922e979a6f227b9b453e2134998737cba6a SHA256 196c6437d63b3d1dee5ee10f9fe7900881c5380e5ec0b4d63a9398f7956167df size 463648
-EBUILD libtorrent-0.8.3.ebuild 975 RMD160 a0e9127b3f21c13e298fd570cc8d314535bbad20 SHA1 96f74bfca43ac92861588b5cb2d7bed28f21e74a SHA256 98878600130a5ba9463998f5028836c5fccdec1dd43f546ff9d55d4e4d9abd25 size 975
+DIST libtorrent-0.8.3.tar.gz 445167
+DIST libtorrent-0.9.0.tar.gz 461999 RMD160 3ad37136459bd965d73003bc7f1aa35c30c3d11e SHA1 15f6081cc225ac1aa219d596aae133fbe3b599f7 SHA256 2181e7550f3837735252c51db005101eabceab6a247d1cd13f451511f4d18ef7
+DIST libtorrent-0.9.1.tar.gz 462098 RMD160 20a17dcf76290ef32505672d4c85ab1fb027db22 SHA1 e5f3f552b2cb692bc7628b97ec9186d43ecc5c99 SHA256 98a634d361922a7f41b7bd18f21c3c98749908046117b11ca43d414cbcd62e05
+DIST libtorrent-0.9.2.tar.gz 463648 RMD160 2e084922e979a6f227b9b453e2134998737cba6a SHA1 e50db774241c9b36b75ab25e31089bea18a67ce1 SHA256 196c6437d63b3d1dee5ee10f9fe7900881c5380e5ec0b4d63a9398f7956167df
+DIST libtorrent-0.9.3.tar.gz 463674 RMD160 a0635bf0b53f6d931ce5ab6b56dcf47220fc606d SHA1 a4e2f80ce631f46100b69451bb4416544374cfd1 SHA256 1bbc9c417c1595b4ddd06b40af0e15f2ac7e146e7e148ec47af28121a7a90799
+EBUILD libtorrent-0.8.3.ebuild 975 RMD160 a0e9127b3f21c13e298fd570cc8d314535bbad20 SHA1 96f74bfca43ac92861588b5cb2d7bed28f21e74a SHA256 98878600130a5ba9463998f5028836c5fccdec1dd43f546ff9d55d4e4d9abd25
 MD5 4c1a7e9a6bc02a45762d4515c2ad39c4 libtorrent-0.8.3.ebuild 975
 RMD160 a0e9127b3f21c13e298fd570cc8d314535bbad20 libtorrent-0.8.3.ebuild 975
 SHA256 98878600130a5ba9463998f5028836c5fccdec1dd43f546ff9d55d4e4d9abd25 libtorrent-0.8.3.ebuild 975
-EBUILD libtorrent-0.9.0-r1.ebuild 1077 RMD160 434091187e404a8a78db262bbb845d7cc545e5fc SHA1 1f760caabd5095d7c5cbe640808b9c012578953a SHA256 ce453fd8a62a366e46bd8e9317001c68fea42ff9b69e41759a4a44c10b542c84 size 1077
+EBUILD libtorrent-0.9.0-r1.ebuild 1077 RMD160 434091187e404a8a78db262bbb845d7cc545e5fc SHA1 1f760caabd5095d7c5cbe640808b9c012578953a SHA256 ce453fd8a62a366e46bd8e9317001c68fea42ff9b69e41759a4a44c10b542c84
 MD5 db07dee90aaee0920633975aabfb8aa7 libtorrent-0.9.0-r1.ebuild 1077
 RMD160 434091187e404a8a78db262bbb845d7cc545e5fc libtorrent-0.9.0-r1.ebuild 1077
 SHA256 ce453fd8a62a366e46bd8e9317001c68fea42ff9b69e41759a4a44c10b542c84 libtorrent-0.9.0-r1.ebuild 1077
-EBUILD libtorrent-0.9.0.ebuild 992 RMD160 515128635dd3d20fac6f6c1b5b4310c71f52b9ef SHA1 f9c9aa04519bf733c173660f3d79849be5cec388 SHA256 abc66e331a69e1916a64ec27930fecddf2ead2cd41eef3e3b1d847505448b7d2 size 992
+EBUILD libtorrent-0.9.0.ebuild 992 RMD160 515128635dd3d20fac6f6c1b5b4310c71f52b9ef SHA1 f9c9aa04519bf733c173660f3d79849be5cec388 SHA256 abc66e331a69e1916a64ec27930fecddf2ead2cd41eef3e3b1d847505448b7d2
 MD5 13898914dc4cf98d660cb94fd127283d libtorrent-0.9.0.ebuild 992
 RMD160 515128635dd3d20fac6f6c1b5b4310c71f52b9ef libtorrent-0.9.0.ebuild 992
 SHA256 abc66e331a69e1916a64ec27930fecddf2ead2cd41eef3e3b1d847505448b7d2 libtorrent-0.9.0.ebuild 992
-EBUILD libtorrent-0.9.1.ebuild 992 RMD160 8e77ff2bf9a1b4b48bb9d35f9dac0bc7963d7de4 SHA1 fac00bad5ab6ec82c4e3c3b8ecfbc7d01ad42987 SHA256 14c1154379add68d073d15b4f0983d76e78f5aff2d66a83f33905adc0c9f943a size 992
+EBUILD libtorrent-0.9.1.ebuild 992 RMD160 8e77ff2bf9a1b4b48bb9d35f9dac0bc7963d7de4 SHA1 fac00bad5ab6ec82c4e3c3b8ecfbc7d01ad42987 SHA256 14c1154379add68d073d15b4f0983d76e78f5aff2d66a83f33905adc0c9f943a
 MD5 de3e8f7647dc828b5e36bb267a8400f7 libtorrent-0.9.1.ebuild 992
 RMD160 8e77ff2bf9a1b4b48bb9d35f9dac0bc7963d7de4 libtorrent-0.9.1.ebuild 992
 SHA256 14c1154379add68d073d15b4f0983d76e78f5aff2d66a83f33905adc0c9f943a libtorrent-0.9.1.ebuild 992
-EBUILD libtorrent-0.9.2.ebuild 992 RMD160 98fa9246df2c2976728b215756dad61864c004f6 SHA1 e5b59c9963d03cb6c13ba591f15af34e5e414b5d SHA256 5076c07be66b5fd85860fbaf5b002c14d5cb68f1190a755cf2aeca6424ea57be size 992
+EBUILD libtorrent-0.9.2.ebuild 992 RMD160 98fa9246df2c2976728b215756dad61864c004f6 SHA1 e5b59c9963d03cb6c13ba591f15af34e5e414b5d SHA256 5076c07be66b5fd85860fbaf5b002c14d5cb68f1190a755cf2aeca6424ea57be
 MD5 b9833ee713c98cc30f7eceb1dd9a5396 libtorrent-0.9.2.ebuild 992
 RMD160 98fa9246df2c2976728b215756dad61864c004f6 libtorrent-0.9.2.ebuild 992
 SHA256 5076c07be66b5fd85860fbaf5b002c14d5cb68f1190a755cf2aeca6424ea57be libtorrent-0.9.2.ebuild 992
-MISC ChangeLog 9116 RMD160 3f572a9c5fb89358823c675aa7c51780cbabbc0c SHA1 a16d453233dc3f1c40555d75682dffa450d0c0bf SHA256 82dc9fe4bd9ed68c9aa1710bf53f6bf7549d806564923e2dad86a83977cdc491 size 9116
-MD5 338eb40ad4098d8dca7f35a299ce810b ChangeLog 9116
-RMD160 3f572a9c5fb89358823c675aa7c51780cbabbc0c ChangeLog 9116
-SHA256 82dc9fe4bd9ed68c9aa1710bf53f6bf7549d806564923e2dad86a83977cdc491 ChangeLog 9116
-MISC metadata.xml 224 RMD160 aedcea58a9a1d4c2217c92783ef458ebbcbba257 SHA1 9e3fb6cdc28fb6aa6e7429a7b2798b23f3fcb49e SHA256 03531f52debc5e006e7461e5e268c6509dd43582e0980dbe7645ea13c8d94355 size 224
+EBUILD libtorrent-0.9.3.ebuild 992 RMD160 6b12e6fe955f0631f580763b2d732fc133db1671 SHA1 1ddbe8535a941c1278b814a1133e60174fae34f5 SHA256 19d4d070d616cb6f8ad3adfa03a8c47a706491b7d46b9aab09abbdf7eeb09b01
+MD5 b52b32679d732e151475611485655d74 libtorrent-0.9.3.ebuild 992
+RMD160 6b12e6fe955f0631f580763b2d732fc133db1671 libtorrent-0.9.3.ebuild 992
+SHA256 19d4d070d616cb6f8ad3adfa03a8c47a706491b7d46b9aab09abbdf7eeb09b01 libtorrent-0.9.3.ebuild 992
+MISC ChangeLog 9247 RMD160 f2dae8b2dae61c4da399d31b099b6ec7a5b41949 SHA1 a392a51cd6dba1d87eb99f5aa45356b777daa359 SHA256 7f9de50c869c43da3f8d4477f06b35541fa9299d5760c7c565cb4ddbdf0542a9
+MD5 371a51a2681155fd13d67411ef77137d ChangeLog 9247
+RMD160 f2dae8b2dae61c4da399d31b099b6ec7a5b41949 ChangeLog 9247
+SHA256 7f9de50c869c43da3f8d4477f06b35541fa9299d5760c7c565cb4ddbdf0542a9 ChangeLog 9247
+MISC metadata.xml 224 RMD160 aedcea58a9a1d4c2217c92783ef458ebbcbba257 SHA1 9e3fb6cdc28fb6aa6e7429a7b2798b23f3fcb49e SHA256 03531f52debc5e006e7461e5e268c6509dd43582e0980dbe7645ea13c8d94355
 MD5 b59f615ff4e1c464f88d1667a66f6b5d metadata.xml 224
 RMD160 aedcea58a9a1d4c2217c92783ef458ebbcbba257 metadata.xml 224
 SHA256 03531f52debc5e006e7461e5e268c6509dd43582e0980dbe7645ea13c8d94355 metadata.xml 224
@@ -52,10 +57,13 @@ SHA256 665db958f1a09e1d31a35a6fe9e22d46e8ecd4575dd344ad048fd15a750642c4 files/di
 MD5 74de04eaff5e41f78b9c6f734046c1ac files/digest-libtorrent-0.9.2 250
 RMD160 0f18ad2c8c205344753e455740b08c2be9dffbdd files/digest-libtorrent-0.9.2 250
 SHA256 a439b6b44d15983a781b86bcfaa4e125668ebd46616ddfbbe2a14b5cf3f7cee7 files/digest-libtorrent-0.9.2 250
+MD5 067eee423d4cb8e690410967d862b698 files/digest-libtorrent-0.9.3 250
+RMD160 ee6d7fdb8ea49c170404c138dc25eeaa5844f70c files/digest-libtorrent-0.9.3 250
+SHA256 5467841f2bf671abe15bf8e8359c28e8a1bf1903b84e3a8412f2f9c143092934 files/digest-libtorrent-0.9.3 250
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.3 (GNU/Linux)
 
-iD8DBQFEbfd0AiZjviIA2XgRAk+rAKCexD+jlzWvY/zwURdT27s8JuTp7QCeO6iU
-Oz0f7aK0Nbo/KpdZ89BXBvI=
-=fUm0
+iD8DBQFEctiyAiZjviIA2XgRAkb3AJ4hAtn5wAKtwC1C407JWFHYzX9EZACeLMza
+V5wns9vXinOgR+k1wS5j+kc=
+=ks1k
 -----END PGP SIGNATURE-----
