@@ -1,0 +1,3 @@
+MD5 438192530048c5ba67bbc2f9852c695c libtorrent-0.9.3.tar.gz 463674
+RMD160 a0635bf0b53f6d931ce5ab6b56dcf47220fc606d libtorrent-0.9.3.tar.gz 463674
+SHA256 1bbc9c417c1595b4ddd06b40af0e15f2ac7e146e7e148ec47af28121a7a90799 libtorrent-0.9.3.tar.gz 463674
