@@ -1,6 +1,12 @@
 # ChangeLog for net-libs/libtorrent
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.56 2006/05/19 16:50:53 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libtorrent/ChangeLog,v 1.57 2006/05/23 09:40:50 flameeyes Exp $
+
+*libtorrent-0.9.3 (23 May 2006)
+
+  23 May 2006; Diego Pettenò <flameeyes@gentoo.org>
+  +libtorrent-0.9.3.ebuild:
+  Version bump.
 
   19 May 2006; Diego Pettenò <flameeyes@gentoo.org> +Manifest.asc:
   Force manifest sign.
